Add all Required Config for Docker

--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,9 @@ NODE_ENV = 'development'
 
 PORT=8000
 CORS_ORIGIN=*
-MONGODB_URI=mongodb://username:password@localhost:27017 #for docker db url
+
+REDIS_URI=redis://:password@service-name:6379 # when you use docker
+# REDIS_URI=127.0.0.1:6379
+
+MONGODB_URI=mongodb://username:password@service-name:27017 # when you use docker
 # MONGODB_URI=mongodb://localhost:27017
